Birçok Güncelleme Yapıldı.

--- a/qml.qrc
+++ b/qml.qrc
@@ -38,5 +38,6 @@
         <file>TC/TCQml.qml</file>
         <file>Talep/Kategoriler/KategoriList.qml</file>
         <file>Talep/Kategoriler/KategoriListItem.qml</file>
+        <file>Talep/Kategoriler/KategoriYeniEkle.qml</file>
     </qresource>
 </RCC>
